fix assignment for col-order funct in strava_df

--- a/strava_API.ipynb
+++ b/strava_API.ipynb
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "f72dac6a-4c86-4010-83b4-69b910facdd1",
    "metadata": {},
    "outputs": [
@@ -492,7 +492,7 @@
        "29  14621663272  The Long Way Home  2025-05-28         230.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 23,
    "id": "e8e6e608-1c93-42ca-ba54-5b69f663c844",
    "metadata": {},
    "outputs": [],
@@ -516,7 +516,7 @@
     "# activity_id = 15048399185\n",
     "\n",
     "def get_zones_for_id(activity_id):\n",
-    "    # print(activity_id)\n",
+    "    print(activity_id)\n",
     "    url = f'https://www.strava.com/api/v3/activities/{activity_id}/zones'\n",
     "    # Set up Authorization header and make request\n",
     "    headers = {'Authorization': f'Bearer {access_token}'}\n",
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "5d10732e-598d-4510-9ee3-6a1fbed37afe",
    "metadata": {},
    "outputs": [],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 25,
    "id": "24ecc5f5-4b32-4a9a-b317-dd33255e8401",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1099,7 @@
        "29     94.2  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
