supress timezone warnings in pandas

--- a/strava_API.ipynb
+++ b/strava_API.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 272,
    "id": "5d459dfb-74f9-41d9-8af4-c92e2c2b4a4c",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "'/Users/edwardterrell/Desktop/Training/kindle/strava'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 272,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,17 +23,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 276,
    "id": "d6710164-d780-4a78-84ab-36ef6b5000f8",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "'/Users/edwardterrell/opt/anaconda3/envs/mlml/bin/python'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 276,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,48 +54,26 @@
     "from pprint import pprint\n",
     "import pandas as pd\n",
     "pd.set_option('display.precision', 1)\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", message=\".*will drop timezone.*\")\n",
+    "\n",
+    "\n",
+    "%matplotlib inline\n",
+    "from IPython.core.display import HTML\n",
+    "css = open('style-table.css').read() + open('style-notebook.css').read()\n",
+    "HTML('<style>{}</style>'.format(css))\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from clean_convert import cleanup, convert_speed, order_columns\n",
     "\n",
-    "\n",
-    "from IPython.core.display import HTML\n",
-    "with open(\"style-table.css\") as f1, open(\"style-notebook.css\") as f2:\n",
-    "    css = f1.read() + f2.read()\n",
-    "HTML(f\"<style>{css}</style>\")\n",
+    "# import graphics programs\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "sns.set(rc={'figure.figsize':(14,6)}) # for all future plots\n",
     "\n",
     "import sys\n",
     "sys.executable"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "ef1d9104-3a0a-4425-9df4-4ff2739c1fc5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using access token: 8e5e6a3dd85ce84a4003a72c0a7b1b163bb2d747\n",
-      "{'id': 723727, 'username': 'eterrell', 'resource_state': 2, 'firstname': 'Ed', 'lastname': 'Terrell', 'bio': '', 'city': 'Boulder', 'state': 'CO', 'country': 'United States', 'sex': 'M', 'premium': True, 'summit': True, 'created_at': '2012-07-05T00:04:09Z', 'updated_at': '2025-07-09T12:38:59Z', 'badge_type_id': 1, 'weight': 61.235, 'profile_medium': 'https://dgalywyr863hv.cloudfront.net/pictures/athletes/723727/20826329/1/medium.jpg', 'profile': 'https://dgalywyr863hv.cloudfront.net/pictures/athletes/723727/20826329/1/large.jpg', 'friend': None, 'follower': None}\n"
-     ]
-    }
-   ],
-   "source": [
-    "from token_manager import get_valid_access_token\n",
-    "\n",
-    "access_token = get_valid_access_token()\n",
-    "print(\"Using access token:\", access_token)\n",
-    "\n",
-    "# Make an authenticated API call\n",
-    "response = requests.get(\n",
-    "    'https://www.strava.com/api/v3/athlete',\n",
-    "    headers={'Authorization': f'Bearer {access_token}'}\n",
-    ")\n",
-    "print(response.json())"
    ]
   },
   {
@@ -547,46 +533,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "5d10732e-598d-4510-9ee3-6a1fbed37afe",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "15061307314\n",
-      "15048399185\n",
-      "15037283785\n",
-      "15027982989\n",
-      "15017668877\n",
-      "15006491752\n",
-      "14975645989\n",
-      "14964904782\n",
-      "14954454448\n",
-      "14944687171\n",
-      "14934728422\n",
-      "14925456666\n",
-      "14915319034\n",
-      "14873916201\n",
-      "14860197741\n",
-      "14854414147\n",
-      "14840593381\n",
-      "14767120578\n",
-      "14758807206\n",
-      "14748055178\n",
-      "14737389332\n",
-      "14727760782\n",
-      "14715424784\n",
-      "14705554493\n",
-      "14694429401\n",
-      "14684468262\n",
-      "14672337121\n",
-      "14666228613\n",
-      "14621663272\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "zone_df = strava_zone_df['id'].apply(get_zones_for_id)\n",
     "\n",
@@ -1057,19 +1007,6 @@
     "# Format weeks as strings (e.g. 'Jul 01', 'Jul 08')\n",
     "week_summary[\"week\"] = week_summary[\"week_start\"].dt.strftime('%b %d')\n",
     "week_summary.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 263,
-   "id": "123cdc6e-477e-4e78-a00d-eeaf6b2b1fca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "sns.set(rc={'figure.figsize':(14,6)}) # for all future plots"
    ]
   },
   {
