created subdir for images,css and unused py files

--- a/strava_API.ipynb
+++ b/strava_API.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "f86e2403-fec5-475b-9ee0-efa17cf601f7",
    "metadata": {},
    "outputs": [
@@ -93,7 +93,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
    "source": [
     "%matplotlib inline\n",
     "from IPython.core.display import HTML\n",
-    "css = open('style-table.css').read() + open('style-notebook.css').read()\n",
+    "css = open('css/style-table.css').read() + open('css/style-notebook.css').read()\n",
     "HTML('<style>{}</style>'.format(css))"
    ]
   },
