implemented get_date, get_year, and added -empty- option to functions. Added code to preload empty dfs in strava_API

--- a/strava_API.ipynb
+++ b/strava_API.ipynb
@@ -60,8 +60,7 @@
     "import time\n",
     "import os\n",
     "from pprint import pprint\n",
-    "import datetime\n",
-    "from datetime import date,timedelta\n",
+    "from datetime import date,timedelta,datetime\n",
     "\n",
     "import pandas as pd\n",
     "pd.set_option('display.precision', 1)\n",
@@ -70,7 +69,7 @@
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from clean_convert import cleanup, convert_speed, order_columns, process_new_data, save_data\n",
+    "from clean_convert import cleanup, convert_speed, order_columns, process_new_data, save_data, get_date, get_year\n",
     "from zones import get_zones_for_id, build_week_summary\n",
     "from plots_details import display_detail_week\n",
     "\n",
@@ -85,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "fd305d4d-6e3c-4c4e-b37c-f24ca22263fb",
    "metadata": {},
    "outputs": [
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "61801378-e8bf-4f37-a6a4-ec37fa4d8ede",
    "metadata": {},
    "outputs": [
@@ -175,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "695c3577-cfb5-45d2-a1be-f372d46a4698",
    "metadata": {},
    "outputs": [
@@ -208,6 +207,9 @@
     }
    ],
    "source": [
+    "# Loading empty dfs for user to start from scratch\n",
+    "strava_df = pd.read_pickle(f\"data/strava_data_empty.pkl\")\n",
+    "strava_zone_df = pd.read_pickle(f\"data/strava_zone_data_empty.pkl\")\n",
     "!tree data"
    ]
   },
@@ -216,25 +218,68 @@
    "id": "216a56ff-d00f-4a73-8743-981037047842",
    "metadata": {},
    "source": [
-    "### Select date range - default is yesterday to tomorrow"
+    "### Select date range and year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "dffcdbbd-36d0-4ae4-bccf-a57c9f8860ce",
+   "execution_count": 27,
+   "id": "9370421f-3af8-45c4-8914-1a080f16f511",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter folder date [2025-07-19]:  2025-07-20\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Folder selected: 2025-07-20\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter year [2025]:  2025\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Year selected: 2025\n"
+     ]
+    }
+   ],
    "source": [
+    "# select 'empty' to start new dfs from scratch\n",
     "# Default values\n",
     "today = date.today().strftime('%Y-%m-%d')\n",
     "yesterday = (date.today() - timedelta(days=1)).strftime('%Y-%m-%d')\n",
-    "tomorrow = (date.today() + timedelta(days=1)).strftime('%Y-%m-%d')"
+    "tomorrow = (date.today() + timedelta(days=1)).strftime('%Y-%m-%d')\n",
+    "\n",
+    "# Get folder name and year from user\n",
+    "my_folder = get_date(\"Enter folder date\", default=yesterday)\n",
+    "print(f\"✅ Folder selected: {my_folder}\")\n",
+    "if my_folder is None:\n",
+    "    print(\"📭 Empty data mode selected. Skipping further input.\")\n",
+    "else:\n",
+    "    # Get year from user\n",
+    "    year = get_year(\"Enter year\", default='2025')\n",
+    "    print(f\"✅ Year selected: {year}\")\n",
+    "    # Reload dfs and confirm lengths\n",
+    "    strava_df = pd.read_pickle(f\"data/{my_folder}/strava_data_{year}.pkl\")\n",
+    "    strava_zone_df = pd.read_pickle(f\"data/{my_folder}/strava_zone_data_{year}.pkl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "id": "4eece22c-63a3-4e0a-8d4e-211496866d0e",
    "metadata": {},
    "outputs": [
@@ -248,195 +293,29 @@
     }
    ],
    "source": [
-    "# select folder-year of pickle file e.g. (\"data/2025-07-18/strava_data_2025.pkl\")\n",
-    "# select 'empty' to start new dfs from scratch\n",
-    "\n",
-    "# Default is yesterday for file location\n",
-    "my_folder = today\n",
-    "# my_folder = '2025-07-18'\n",
-    "\n",
-    "year = 2025\n",
-    "\n",
-    "# Reload dfs and confirm lengths\n",
-    "strava_df = pd.read_pickle(f\"data/{my_folder}/strava_data_{year}.pkl\")\n",
-    "strava_zone_df = pd.read_pickle(f\"data/{my_folder}/strava_zone_data_{year}.pkl\")\n",
-    "\n",
+    "# confirm lengths\n",
     "print(len(strava_df))\n",
     "print(len(strava_zone_df))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "adcc79f8-da82-4f11-ba95-e88758d401f3",
+   "execution_count": null,
+   "id": "bb628fe0-e4dc-4022-a477-c0e95bae3a56",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>date</th>\n",
-       "      <th>sport</th>\n",
-       "      <th>distance</th>\n",
-       "      <th>time</th>\n",
-       "      <th>speed</th>\n",
-       "      <th>elev_gain</th>\n",
-       "      <th>avg_HR</th>\n",
-       "      <th>max_HR</th>\n",
-       "      <th>suffer_score</th>\n",
-       "      <th>time-minutes</th>\n",
-       "      <th>average_speed</th>\n",
-       "      <th>start_date</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>15178346085</td>\n",
-       "      <td>Sandstone Ranch - recovery ride</td>\n",
-       "      <td>2025-07-20</td>\n",
-       "      <td>Ride</td>\n",
-       "      <td>30.5</td>\n",
-       "      <td>2:04</td>\n",
-       "      <td>14.7</td>\n",
-       "      <td>584.0</td>\n",
-       "      <td>103.0</td>\n",
-       "      <td>167.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>124.5</td>\n",
-       "      <td>6.6</td>\n",
-       "      <td>2025-07-20 13:46:19+00:00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            id                             name        date sport  distance  \\\n",
-       "0  15178346085  Sandstone Ranch - recovery ride  2025-07-20  Ride      30.5   \n",
-       "\n",
-       "   time speed  elev_gain  avg_HR  max_HR  suffer_score  time-minutes  \\\n",
-       "0  2:04  14.7      584.0   103.0   167.0          33.0         124.5   \n",
-       "\n",
-       "   average_speed                start_date  \n",
-       "0            6.6 2025-07-20 13:46:19+00:00  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "strava_df.head(1)"
+    "# select 'empty' to start new dfs from scratch e.g. (strava_data_empty.pkl)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8f18dcf4-c2b5-4f07-b77f-2e46cb9e96e2",
+   "execution_count": null,
+   "id": "faabedc0-335a-4fc3-862b-6ee2213b57a2",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>date</th>\n",
-       "      <th>suffer_score</th>\n",
-       "      <th>start_date</th>\n",
-       "      <th>Zone1</th>\n",
-       "      <th>Zone2</th>\n",
-       "      <th>Zone3</th>\n",
-       "      <th>Zone4</th>\n",
-       "      <th>Zone5</th>\n",
-       "      <th>moderate</th>\n",
-       "      <th>intense</th>\n",
-       "      <th>week_start</th>\n",
-       "      <th>weekly_intense</th>\n",
-       "      <th>weekly_moderate</th>\n",
-       "      <th>weekly_suffer_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>15178346085</td>\n",
-       "      <td>Sandstone Ranch - recovery ride</td>\n",
-       "      <td>2025-07-20</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>2025-07-20 13:46:19+00:00</td>\n",
-       "      <td>1.8</td>\n",
-       "      <td>122.2</td>\n",
-       "      <td>0.3</td>\n",
-       "      <td>5.0e-02</td>\n",
-       "      <td>8.3e-02</td>\n",
-       "      <td>124.1</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>2025-07-14</td>\n",
-       "      <td>122.1</td>\n",
-       "      <td>704.2</td>\n",
-       "      <td>538.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            id                             name        date  suffer_score  \\\n",
-       "0  15178346085  Sandstone Ranch - recovery ride  2025-07-20          33.0   \n",
-       "\n",
-       "                 start_date  Zone1  Zone2  Zone3    Zone4    Zone5  moderate  \\\n",
-       "0 2025-07-20 13:46:19+00:00    1.8  122.2    0.3  5.0e-02  8.3e-02     124.1   \n",
-       "\n",
-       "   intense week_start  weekly_intense  weekly_moderate  weekly_suffer_score  \n",
-       "0      0.5 2025-07-14           122.1            704.2                538.0  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# last entry date\n",
+    "strava_df.head(1)\n",
     "strava_zone_df.head(1)"
    ]
   },
@@ -474,41 +353,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "e3b5dfbb-e60a-44bc-ad68-2f8661827f48",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "Enter START date [2025-07-19]:  \n",
-      "Enter END date [2025-07-21]:  \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "✅ Date range selected:\n",
-      "Start: 2025-07-19\n",
-      "End:   2025-07-21\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def get_date(prompt, default=None):\n",
-    "    while True:\n",
-    "        user_input = input(f\"{prompt} [{default}]: \").strip()\n",
-    "        if user_input == \"\":\n",
-    "            return default\n",
-    "        try:\n",
-    "            parsed_date = datetime.strptime(user_input, '%Y-%m-%d')\n",
-    "            return parsed_date.strftime('%Y-%m-%d')\n",
-    "        except ValueError:\n",
-    "            print(\"❌ Invalid date format. Use YYYY-MM-DD.\")\n",
-    "\n",
     "# Get start and end dates from user\n",
     "start_date_str = get_date(\"Enter START date\", default=yesterday)\n",
     "end_date_str = get_date(\"Enter END date\", default=tomorrow)\n",
@@ -518,20 +367,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "d996046f-d2c9-4230-a2c5-bdae52b38e9d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "ID: 15178346085, Name: Sandstone Ranch - recovery ride, Date: 2025-07-20T13:46:19Z\n",
-      "ID: 15169016891, Name: Raymond to Ward - that was brutal, Date: 2025-07-19T13:23:35Z\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Desired number of activities for upload\n",
     "num_of_activities_for_upload = 50\n",
@@ -575,28 +414,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "aafab648-08de-42f1-9832-fc892ea5843f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Build out strava_df with only the necessary columns\n",
     "recent_df = pd.DataFrame(activities)\n",
@@ -620,28 +441,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "bfb9d6c8-d0d2-49d9-a548-3e39e19abb99",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No new activities to process.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "125"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "strava_df = process_new_data(new_activities_df, strava_df)\n",
     "len(strava_df)"
