--- a/strava_API.ipynb
+++ b/strava_API.ipynb
@@ -1569,20 +1569,32 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "id": "dab082d3-f5cc-40e3-8c8e-540d9beb8380",
+   "metadata": {},
+   "source": [
+    "zone 1           <103\n",
+    "zone 2 Moderate  103-123\n",
+    "zone 3 Tempo     123 - 138\n",
+    "zone 4 Threshold 138 - 153\n",
+    "zone 5 Anaerobic > 153"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "id": "b65baccb-f8e0-4fed-b822-cd0d421e0f6d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# default start is current week\n",
     "start = week_summary.sort_values('week_start',ascending=False).iloc[0,0]\n",
-    "#start = \"2025-01-27\" # <-- select custom week starting datea"
+    "start = \"2025-06-02\" # <-- select custom week starting datea"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "id": "f54f7731-2e01-4b90-bd21-12db0b2fc511",
    "metadata": {},
    "outputs": [],
@@ -1592,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 51,
    "id": "74075ed0-bac7-41c6-97d6-bad781d61939",
    "metadata": {},
    "outputs": [
@@ -1632,64 +1644,137 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>15216674933</td>\n",
-       "      <td>Pedals and Pints</td>\n",
-       "      <td>2025-07-23</td>\n",
+       "      <th>105</th>\n",
+       "      <td>14737389332</td>\n",
+       "      <td>Ward</td>\n",
+       "      <td>2025-06-08</td>\n",
        "      <td>Ride</td>\n",
-       "      <td>18.7</td>\n",
-       "      <td>1:40</td>\n",
-       "      <td>11.2</td>\n",
-       "      <td>751.3</td>\n",
-       "      <td>102.2</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>18.0</td>\n",
+       "      <td>52.3</td>\n",
+       "      <td>3:57</td>\n",
+       "      <td>13.2</td>\n",
+       "      <td>4681.8</td>\n",
+       "      <td>118.7</td>\n",
+       "      <td>139.0</td>\n",
+       "      <td>253.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>15210498851</td>\n",
-       "      <td>Old Stage and gravel loop</td>\n",
-       "      <td>2025-07-23</td>\n",
+       "      <th>104</th>\n",
+       "      <td>14727760782</td>\n",
+       "      <td>Winfield meanderings</td>\n",
+       "      <td>2025-06-07</td>\n",
        "      <td>Ride</td>\n",
-       "      <td>23.3</td>\n",
-       "      <td>1:43</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>1389.4</td>\n",
-       "      <td>130.9</td>\n",
-       "      <td>202.0</td>\n",
-       "      <td>51.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>15189628842</td>\n",
-       "      <td>Poorman and Chapman</td>\n",
-       "      <td>2025-07-21</td>\n",
-       "      <td>Ride</td>\n",
-       "      <td>35.5</td>\n",
-       "      <td>3:14</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>2814.6</td>\n",
-       "      <td>117.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>3:08</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2089.9</td>\n",
+       "      <td>115.4</td>\n",
        "      <td>144.0</td>\n",
-       "      <td>68.0</td>\n",
+       "      <td>156.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <td>14715424784</td>\n",
+       "      <td>SuperFlag #3 and Petunia donuts (team photogra...</td>\n",
+       "      <td>2025-06-06</td>\n",
+       "      <td>Ride</td>\n",
+       "      <td>30.1</td>\n",
+       "      <td>2:33</td>\n",
+       "      <td>11.8</td>\n",
+       "      <td>2710.0</td>\n",
+       "      <td>115.8</td>\n",
+       "      <td>143.0</td>\n",
+       "      <td>144.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>14705554493</td>\n",
+       "      <td>SuperFlag #2</td>\n",
+       "      <td>2025-06-05</td>\n",
+       "      <td>Ride</td>\n",
+       "      <td>29.8</td>\n",
+       "      <td>2:28</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>2719.8</td>\n",
+       "      <td>116.5</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>143.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>14694429401</td>\n",
+       "      <td>3 mile Morning Run</td>\n",
+       "      <td>2025-06-04</td>\n",
+       "      <td>Run</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>0:31</td>\n",
+       "      <td>10:39</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>52.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>14684468262</td>\n",
+       "      <td>SuperFlag</td>\n",
+       "      <td>2025-06-03</td>\n",
+       "      <td>Ride</td>\n",
+       "      <td>29.3</td>\n",
+       "      <td>2:39</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>2780.8</td>\n",
+       "      <td>116.7</td>\n",
+       "      <td>154.0</td>\n",
+       "      <td>160.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>14672337121</td>\n",
+       "      <td>Boulder Res run - recovery day</td>\n",
+       "      <td>2025-06-02</td>\n",
+       "      <td>Run</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>0:47</td>\n",
+       "      <td>10:19</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>128.3</td>\n",
+       "      <td>141.0</td>\n",
+       "      <td>84.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            id                       name        date sport  distance  time  \\\n",
-       "0  15216674933           Pedals and Pints  2025-07-23  Ride      18.7  1:40   \n",
-       "1  15210498851  Old Stage and gravel loop  2025-07-23  Ride      23.3  1:43   \n",
-       "0  15189628842        Poorman and Chapman  2025-07-21  Ride      35.5  3:14   \n",
+       "              id                                               name  \\\n",
+       "105  14737389332                                               Ward   \n",
+       "104  14727760782                               Winfield meanderings   \n",
+       "103  14715424784  SuperFlag #3 and Petunia donuts (team photogra...   \n",
+       "102  14705554493                                       SuperFlag #2   \n",
+       "101  14694429401                                 3 mile Morning Run   \n",
+       "100  14684468262                                          SuperFlag   \n",
+       "99   14672337121                     Boulder Res run - recovery day   \n",
        "\n",
-       "  speed  elev_gain  avg_HR  max_HR  suffer_score  \n",
-       "0  11.2      751.3   102.2   138.0          18.0  \n",
-       "1  13.5     1389.4   130.9   202.0          51.0  \n",
-       "0  11.0     2814.6   117.3   144.0          68.0  "
+       "           date sport  distance  time  speed  elev_gain  avg_HR  max_HR  \\\n",
+       "105  2025-06-08  Ride      52.3  3:57   13.2     4681.8   118.7   139.0   \n",
+       "104  2025-06-07  Ride      40.8  3:08   13.0     2089.9   115.4   144.0   \n",
+       "103  2025-06-06  Ride      30.1  2:33   11.8     2710.0   115.8   143.0   \n",
+       "102  2025-06-05  Ride      29.8  2:28   12.1     2719.8   116.5   146.0   \n",
+       "101  2025-06-04   Run       2.9  0:31  10:39        8.9   127.0   165.0   \n",
+       "100  2025-06-03  Ride      29.3  2:39   11.0     2780.8   116.7   154.0   \n",
+       "99   2025-06-02   Run       4.6  0:47  10:19      186.0   128.3   141.0   \n",
+       "\n",
+       "     suffer_score  \n",
+       "105         253.0  \n",
+       "104         156.0  \n",
+       "103         144.0  \n",
+       "102         143.0  \n",
+       "101          52.0  \n",
+       "100         160.0  \n",
+       "99           84.0  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1730,67 +1815,144 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Pedals and Pints</td>\n",
-       "      <td>2025-07-23</td>\n",
-       "      <td>56.9</td>\n",
-       "      <td>40.6</td>\n",
-       "      <td>3.1</td>\n",
+       "      <th>29</th>\n",
+       "      <td>Ward</td>\n",
+       "      <td>2025-06-08</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>117.2</td>\n",
+       "      <td>111.8</td>\n",
+       "      <td>7.4</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>97.5</td>\n",
-       "      <td>3.1</td>\n",
-       "      <td>2025-07-21</td>\n",
-       "      <td>320.9</td>\n",
-       "      <td>77.1</td>\n",
+       "      <td>117.9</td>\n",
+       "      <td>119.3</td>\n",
+       "      <td>2025-06-02</td>\n",
+       "      <td>553.2</td>\n",
+       "      <td>409.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Old Stage and gravel loop</td>\n",
-       "      <td>2025-07-23</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>79.6</td>\n",
-       "      <td>17.3</td>\n",
+       "      <th>30</th>\n",
+       "      <td>Winfield meanderings</td>\n",
+       "      <td>2025-06-07</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>143.1</td>\n",
+       "      <td>37.6</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>144.5</td>\n",
+       "      <td>43.5</td>\n",
+       "      <td>2025-06-02</td>\n",
+       "      <td>435.3</td>\n",
+       "      <td>290.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>SuperFlag #3 and Petunia donuts (team photogra...</td>\n",
+       "      <td>2025-06-06</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>79.8</td>\n",
+       "      <td>36.4</td>\n",
+       "      <td>24.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>61.1</td>\n",
+       "      <td>2025-06-02</td>\n",
+       "      <td>290.8</td>\n",
+       "      <td>246.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>SuperFlag #2</td>\n",
+       "      <td>2025-06-05</td>\n",
+       "      <td>7.4</td>\n",
+       "      <td>84.4</td>\n",
+       "      <td>25.2</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>91.9</td>\n",
+       "      <td>56.2</td>\n",
+       "      <td>2025-06-02</td>\n",
+       "      <td>198.8</td>\n",
+       "      <td>185.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>3 mile Morning Run</td>\n",
+       "      <td>2025-06-04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>25.7</td>\n",
        "      <td>1.6</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>84.4</td>\n",
-       "      <td>18.9</td>\n",
-       "      <td>2025-07-21</td>\n",
-       "      <td>223.5</td>\n",
-       "      <td>74.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>27.3</td>\n",
+       "      <td>2025-06-02</td>\n",
+       "      <td>106.9</td>\n",
+       "      <td>129.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Poorman and Chapman</td>\n",
-       "      <td>2025-07-21</td>\n",
-       "      <td>29.1</td>\n",
-       "      <td>110.0</td>\n",
-       "      <td>35.3</td>\n",
-       "      <td>19.8</td>\n",
+       "      <th>34</th>\n",
+       "      <td>SuperFlag</td>\n",
+       "      <td>2025-06-03</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>90.7</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>33.7</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>56.3</td>\n",
+       "      <td>2025-06-02</td>\n",
+       "      <td>104.9</td>\n",
+       "      <td>102.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>Boulder Res run - recovery day</td>\n",
+       "      <td>2025-06-02</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>139.0</td>\n",
-       "      <td>55.1</td>\n",
-       "      <td>2025-07-21</td>\n",
-       "      <td>139.0</td>\n",
-       "      <td>55.1</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>45.2</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>45.8</td>\n",
+       "      <td>2025-06-02</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>45.8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        name        date  Zone1  Zone2  Zone3  Zone4  Zone5  \\\n",
-       "0           Pedals and Pints  2025-07-23   56.9   40.6    3.1    0.0    0.0   \n",
-       "1  Old Stage and gravel loop  2025-07-23    4.8   79.6   17.3    1.6    0.0   \n",
-       "2        Poorman and Chapman  2025-07-21   29.1  110.0   35.3   19.8    0.0   \n",
+       "                                                 name        date  Zone1  \\\n",
+       "29                                               Ward  2025-06-08    0.8   \n",
+       "30                               Winfield meanderings  2025-06-07    1.4   \n",
+       "31  SuperFlag #3 and Petunia donuts (team photogra...  2025-06-06   12.2   \n",
+       "32                                       SuperFlag #2  2025-06-05    7.4   \n",
+       "33                                 3 mile Morning Run  2025-06-04    0.0   \n",
+       "34                                          SuperFlag  2025-06-03   12.3   \n",
+       "35                     Boulder Res run - recovery day  2025-06-02    0.0   \n",
        "\n",
-       "   moderate  intense week_start  weekly_moderate  weekly_intense  \n",
-       "0      97.5      3.1 2025-07-21            320.9            77.1  \n",
-       "1      84.4     18.9 2025-07-21            223.5            74.0  \n",
-       "2     139.0     55.1 2025-07-21            139.0            55.1  "
+       "    Zone2  Zone3  Zone4  Zone5  moderate  intense week_start  weekly_moderate  \\\n",
+       "29  117.2  111.8    7.4    0.0     117.9    119.3 2025-06-02            553.2   \n",
+       "30  143.1   37.6    5.9    0.0     144.5     43.5 2025-06-02            435.3   \n",
+       "31   79.8   36.4   24.7    0.0      92.0     61.1 2025-06-02            290.8   \n",
+       "32   84.4   25.2   31.0    0.0      91.9     56.2 2025-06-02            198.8   \n",
+       "33    2.0   25.7    1.6    0.0       2.0     27.3 2025-06-02            106.9   \n",
+       "34   90.7   20.6   33.7    2.0     103.0     56.3 2025-06-02            104.9   \n",
+       "35    1.9   45.2    0.6    0.0       1.9     45.8 2025-06-02              1.9   \n",
+       "\n",
+       "    weekly_intense  \n",
+       "29           409.5  \n",
+       "30           290.2  \n",
+       "31           246.7  \n",
+       "32           185.6  \n",
+       "33           129.5  \n",
+       "34           102.2  \n",
+       "35            45.8  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
